# pdform

./: .gitignore  README.md  docs.rst  fill_form.py  pyproject.toml
.github/workflows/: python-package.yml
example/: fill_form_VA9.py  fill_form_VBA-21-22-ARE.py  fill_form_dd0293.py
pdform/: __main__.py  main.py
pdform/model/: __init__.py  base.py  content_stream.py  font.py  form_field.py  rect.py  xobject.py
pdform/tools/: __init__.py  form.py  stamp.py
pdform/utils/: dictionaries.py  text.py
