[tool.poetry]
name = "pdform"
version = "0.2.1"
description = ""
authors = ["Dominick Johnson <dominick.johnson@tylertech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pikepdf = "^8.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdform = "main:main"